# nx-player

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  index.html  package.json  pnpm-lock.yaml  vite.config.js
docs/: SOULSEEK_PROTOCOL_SPEC.md
patches/stratum-dsp/: .cargo_vcs_info.json  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Cargo.toml.orig  DEVELOPMENT.md  LICENSE-APACHE  LICENSE-MIT  PIPELINE.md  README.md  ROADMAP.md
patches/stratum-dsp/.github/workflows/: ci.yml
patches/stratum-dsp/archive/: README.md
patches/stratum-dsp/benches/: audio_analysis_bench.rs
patches/stratum-dsp/docs/literature/: README.md  bello_2005_onset_detection_tutorial.md  bello_sandler_2003_phase_onset.md  boeck_2016_beat_downbeat_tracking.md  driedger_mueller_2014_hpss.md  ellis_2007_beat_tracking_dp.md  ellis_pikrakis_2006_beat_induction.md  ellis_poliner_2007_cover_songs.md  gkiokas_2012_bpm_estimation.md  gomtsyan_2019_key_detection.md  grosche_2012_tempogram.md  itu_bs1770_4_loudness.md  klapuri_2006_meter_analysis.md  krumhansl_kessler_1982_key_templates.md  mcfee_ellis_2014_onset_aggregation.md  mueller_2010_chroma_tutorial.md  (+4 more)
patches/stratum-dsp/examples/: analyze_batch.rs  analyze_file.rs
patches/stratum-dsp/models/: .gitkeep
patches/stratum-dsp/scripts/: generate_fixtures.py  requirements.txt
patches/stratum-dsp/src/: config.rs  error.rs  lib.rs
patches/stratum-dsp/tests/: integration_tests.rs
patches/stratum-dsp/validation/: README.md  __init__.py  _id3.py  _keys.py  _paths.py
src/: App.svelte  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: analyzer.rs  covers.rs  covers_fetch.rs  db.rs  extensions.rs  lib.rs  main.rs  models.rs  scanner.rs  waveform.rs
src-tauri/src/audio/: deck.rs  decode.rs  engine.rs  eq.rs  mixer.rs  mod.rs  output.rs  peq.rs  stretch.rs  sync.rs
src-tauri/src/commands/: audio.rs  extensions.rs  library.rs  mod.rs  playlists.rs  settings.rs
src/audio/: stretch_processor.cpp
src/components/: Equalizer.svelte  ListView.svelte  MilkDrop.svelte  MiniPlayer.svelte  NowPlaying.svelte  Settings.svelte  TopBar.svelte  TrackRow.svelte  Waveform.svelte
src/lib/: audio.ts  format.ts  ipc.ts  stretch-node.ts  types.ts
src/stores/: library.svelte.ts  player.svelte.ts  ui.svelte.ts
src/styles/: global.css  theme.css
static/: stretch-worklet-processor.js  stretch.js  stretch.wasm
(+90 files in other folders)
