[package]
name = "nx-player"
version = "1.0.0"
description = "Lightweight music player"
authors = ["Paul de Renty"]
edition = "2021"

[lib]
name = "nx_player_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
lofty = "0.22"
blake3 = "1"
rayon = "1"
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }
uuid = { version = "1", features = ["v4"] }
reqwest = { version = "0.12", features = ["json"] }
walkdir = "2"
dirs = "6"
symphonia = { version = "0.5", default-features = false, features = ["mp3", "isomp4", "aac", "alac", "flac", "ogg", "wav", "pcm"] }
stratum-dsp = "1.0"
cpal = { version = "0.15", features = [] }
rtrb = "0.3"
ssstretch = "0.1"
rubato = "0.16"
percent-encoding = "2"
http = "1"
ebur128 = "0.1"

[target.'cfg(target_os = "macos")'.dependencies]
raw-window-handle = "0.6"
objc2 = "0.6"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.dev.package."*"]
opt-level = 1

[patch.crates-io]
stratum-dsp = { path = "../patches/stratum-dsp" }
